# puns-scipyconference

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml  setup.py
.github/workflows/: code-style.yaml  pr-tests.yaml
docs/: api.md  index.md  usage.md
notebooks/: testdrive_punbot.py
scipyconference/: __init__.py  bots.py  cli.py  models.py  puns.json  puns.py  setup_package.py
tests/: test___init__.py  test_cli.py  test_models.py
